--- a/index.html
+++ b/index.html
@@ -105,18 +105,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 <script>
+ 
   document.querySelectorAll('.btn-expand').forEach(btn => {
     btn.addEventListener('click', () => {
       const currentCard = btn.closest('.project-card-wrapper');
-      const allCards = document.querySelectorAll('.project-card-wrapper');
 
-      allCards.forEach(card => {
-        if (card === currentCard) {
-          card.classList.add('expanded');
-          card.classList.remove('hidden');
-        } else {
-          card.classList.add('hidden');
-        }
+      document.querySelectorAll('.project-card-wrapper').forEach(card => {
+        card.classList.toggle('expanded', card === currentCard);
+        card.classList.toggle('hidden', card !== currentCard);
       });
     });
   });
@@ -124,11 +120,11 @@
   document.querySelectorAll('.btn-close-expand').forEach(btn => {
     btn.addEventListener('click', () => {
       document.querySelectorAll('.project-card-wrapper').forEach(card => {
-        card.classList.remove('expanded');
-        card.classList.remove('hidden');
+        card.classList.remove('expanded', 'hidden');
       });
     });
   });
 </script>
+
 
 </html>
