--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
               Proyecto web real desarrollado para una empresa con iteligencia artificial.
               Incluye diseño, accesibilidad y estructura adecuada.
             </p>
-            <button class="btn btn-sar btn-expand">+</button>
-            <button class="btn btn-secondary btn-close-expand mt-2">X</button>
+            <button class="btn btn-sar btn-expand">Más info</button>
+            <button class="btn btn-secondary btn-close-expand mt-2">Cerrar</button>
           </div>
         </div>
       </div>
@@ -58,8 +58,8 @@
            comunicaciones, actuando también como sociedad intermediaria en actividades profesionales relacionadas con la fabricación y
            desarrollo de productos, aunque su enfoque principal es la distribución mayorista de hardware y componentes tecnológicos.
           </p>
-        <button class="btn btn-sar btn-expand">+</button>
-        <button class="btn btn-secondary btn-close-expand mt-2">X</button>
+        <button class="btn btn-sar btn-expand">Más info</button>
+        <button class="btn btn-secondary btn-close-expand mt-2">Cerrar</button>
       </div>
     </div>
 
@@ -71,8 +71,8 @@
           VAPREL es un proyecto web en el que participé como programador, cuyo objetivo es ofrecer una plataforma sencilla y funcional para 
           la gestión y visualización de información relacionada con el proyecto. Me encargué del desarrollo de la estructura de la web, utilizando HTML, CSS y JavaScript.
           </p>
-        <button class="btn btn-sar btn-expand">+</button>
-        <button class="btn btn-secondary btn-close-expand mt-2">X</button>
+        <button class="btn btn-sar btn-expand">Más info</button>
+        <button class="btn btn-secondary btn-close-expand mt-2">Cerrar</button>
       </div>
     </div>
 
