--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
           <div class="card-body">
             <h5 class="card-title">Página Web real</h5>
             <p class="project-extra">
-              Proyecto web real desarrollado para una empresa con iteligencia artificial.
-              Incluye diseño, accesibilidad y estructura adecuada.
+             Proyecto web real desarrollado para una empresa con inteligencia artificial. Incluye diseño, accesibilidad y una estructura adecuada.
             </p>
             <button class="btn btn-sar btn-expand">Más info</button>
             <button class="btn btn-secondary btn-close-expand mt-2">Cerrar</button>
@@ -54,9 +53,7 @@
         <a href="https://gitec.es/"><img src="img/LogoLevanteGaming.png" alt="" class="card-img-top"></a>
         <h5>Levante Gaming</h5>
          <p class="project-extra">
-          Trabajo en una empresa real, la cual se dedica a la venta del comercio al por mayor de equipos para tecnologías de la información y
-           comunicaciones, actuando también como sociedad intermediaria en actividades profesionales relacionadas con la fabricación y
-           desarrollo de productos, aunque su enfoque principal es la distribución mayorista de hardware y componentes tecnológicos.
+          Trabajé en una empresa real dedicada a la venta mayorista de equipos para tecnologías de la información y las comunicaciones, actuando también como sociedad intermediaria en actividades profesionales relacionadas con la fabricación y el desarrollo de productos. No obstante, su enfoque principal es la distribución mayorista de hardware y componentes tecnológicos.
           </p>
         <button class="btn btn-sar btn-expand">Más info</button>
         <button class="btn btn-secondary btn-close-expand mt-2">Cerrar</button>
@@ -68,8 +65,7 @@
         <a href="https://www.vaprel.es/"><img src="img/vaprelLogo.png" alt="" class="card-img-top"></a>
         <h5>Vaprel</h5>
         <p class="project-extra">
-          VAPREL es un proyecto web en el que participé como programador, cuyo objetivo es ofrecer una plataforma sencilla y funcional para 
-          la gestión y visualización de información relacionada con el proyecto. Me encargué del desarrollo de la estructura de la web, utilizando HTML, CSS y JavaScript.
+          VAPREL es un proyecto web en el que participé como programador, cuyo objetivo es ofrecer una plataforma sencilla y funcional para la gestión y visualización de información relacionada con el proyecto. Me encargué del desarrollo de la estructura de la web, utilizando HTML, CSS y JavaScript.
           </p>
         <button class="btn btn-sar btn-expand">Más info</button>
         <button class="btn btn-secondary btn-close-expand mt-2">Cerrar</button>
