--- a/proyectos.html
+++ b/proyectos.html
@@ -154,9 +154,7 @@
         <div class="modal-body">
           <h3>Porque fue creada</h3>
           <p>
-            Aplicación web centrada en la reconstrucción tras la dana,
-            desarrollada como proyecto colaborativo. Fue creada para ayudar a
-            las personas afectadas por desastres que provoco la dana.
+            Aplicación web centrada en la reconstrucción tras la DANA, desarrollada como proyecto colaborativo. Fue creada para ayudar a las personas afectadas por los desastres que provocó la DANA.
           </p>
           <h3>Lenguajes utilizados</h3>
           <ul>
@@ -183,10 +181,7 @@
         <div class="modal-body">
           <h3>Desarrollo y implementación en la página Web</h3>
           <p>
-            En prácticas profesionales gestioné el desarrollo del sistema de búsqueda dentro de la página WEB interna de
-            la empresa para obtener
-            la información de las máquinas de los usuarios asignados. Con el objetivo de mejorar la perforace de la gestión.
-            El trabajo se desarrolló en base a mis sugerencias y fue realzado con las siguientes herramientas:
+            Durante mis prácticas profesionales, gestioné el desarrollo del sistema de búsqueda dentro de la página web interna de la empresa para obtener la información de las máquinas asignadas a los usuarios, con el objetivo de mejorar el rendimiento de la gestión. El trabajo se desarrolló en base a mis sugerencias y fue realizado con las siguientes herramientas:
           </p>
 
           <ul>
@@ -214,9 +209,7 @@
         <div class="modal-body">
           <h3>Experiencia</h3>
           <p>
-            Resumen de trabajos destacados realizados durante mi formación académica. Desde el backend hasta el
-            frontend,
-            abarcando diversas tecnologías y metodologías de desarrollo web.
+            Resumen de trabajos destacados realizados durante mi formación académica, desde el backend hasta el frontend, abarcando diversas tecnologías y metodologías de desarrollo web.
           </p>
           <h3>Las habilidades adquiridas incluyen:</h3>
           <ul>
@@ -244,10 +237,7 @@
 
         <div class="modal-body">
           <p>
-            VAPREL es un proyecto en el que tuve la oportunidad de participar durante mis prácticas como alumno de TSMR. Aunque mi rol principal no era 
-            el de programador, por interés personal en el desarrollo web me permitieron ver y comprender parte del código del proyecto, además de explicarme 
-            cómo estaba estructurado. Gracias a ello aprendí conceptos básicos de HTML, CSS , JavaScript y PHP, 
-            entendí cómo se organiza una aplicación web real y cómo se trabaja en un entorno profesional, lo que despertó aún más mi interés por la programación.
+            VAPREL es un proyecto en el que tuve la oportunidad de participar durante mis prácticas como alumno de TSMR. Aunque mi rol principal no era el de programador, por interés personal en el desarrollo web me permitieron ver y comprender parte del código del proyecto, además de explicarme cómo estaba estructurado. Gracias a ello, aprendí conceptos básicos de HTML, CSS, JavaScript y PHP, entendí cómo se organiza una aplicación web real y cómo se trabaja en un entorno profesional, lo que despertó aún más mi interés por la programación.
           </p>
 
           <ul>
