agregando perfil.html

--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,8 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="proyectos.html">Proyectos</a></li>
-          <li class="nav-item"><a class="nav-link active" href="contacto.html">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link active" href="perfil.html">Sobre mí</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -67,9 +68,7 @@
 
         <div class="col-md-3 mb-3">
           <a href="https://www.instagram.com/santialico/"><img src="img/instaBuenFondo.png" alt="" class="Logos"></a>
-          <a
-            href="mailto:Santinoalico5@gmail.com"><img
-              src="img/imgCorreo.png" alt="" class="Logos"></a>
+          <a href="mailto:Santinoalico5@gmail.com"><img src="img/imgCorreo.png" alt="" class="Logos"></a>
           <a href="tel:+34622718731"><img src="img/imgTelefono.png" alt="" class="Logos"></a>
           <a href="https://www.linkedin.com/in/santino-alico-174660329/"><img src="img/imgLINKEDING.png" alt=""
               class="Logos"></a>
