--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="proyectos.html">Proyectos</a></li>
+          <li class="nav-item"><a class="nav-link active" href="perfil.html">Sobre mí</a></li>
           <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
         </ul>
       </div>
@@ -39,7 +40,7 @@
         <div class="card h-100 text-center p-3">
           <a href="https://www.santafemotores.com/"><img src="img/imgSF.jpg" class="card-img-top" alt="SF Motores"></a>
           <div class="card-body">
-            <h5 class="card-title">Página Web real</h5>
+            <h5 class="card-title" style="padding-top: 1.2em">Página Web real</h5>
             <p class="project-extra">
              Proyecto web real desarrollado para una empresa con inteligencia artificial. Incluye diseño, accesibilidad y una estructura adecuada.
             </p>
@@ -51,7 +52,7 @@
       <div class="col-md-4 project-card-wrapper">
       <div class="card h-100 text-center p-3">
         <a href="https://gitec.es/"><img src="img/LogoLevanteGaming.png" alt="" class="card-img-top"></a>
-        <h5>Levante Gaming</h5>
+        <h5 style="padding-top: 1.2em">Levante Gaming</h5>
          <p class="project-extra">
           Trabajé en una empresa real dedicada a la venta mayorista de equipos para tecnologías de la información y las comunicaciones, actuando también como sociedad intermediaria en actividades profesionales relacionadas con la fabricación y el desarrollo de productos. No obstante, su enfoque principal es la distribución mayorista de hardware y componentes tecnológicos.
           </p>
@@ -63,7 +64,7 @@
     <div class="col-md-4 project-card-wrapper">
       <div class="card h-100 text-center p-3">
         <a href="https://www.vaprel.es/"><img src="img/vaprelLogo.png" alt="" class="card-img-top"></a>
-        <h5>Vaprel</h5>
+        <h5 style="padding-top: 1.2em">Vaprel</h5>
         <p class="project-extra">
           VAPREL es un proyecto web en el que participé como programador, cuyo objetivo es ofrecer una plataforma sencilla y funcional para la gestión y visualización de información relacionada con el proyecto. Me encargué del desarrollo de la estructura de la web, utilizando HTML, CSS y JavaScript.
           </p>
