--- a/perfil.html
+++ b/perfil.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre mí · Portfolio SAR</title>
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;800&family=Inter:wght@400;500&display=swap"
     rel="stylesheet">
@@ -15,7 +14,7 @@
 
 <body>
 
-  <!-- NAVBAR (IGUAL QUE INDEX) -->
+  
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
@@ -35,11 +34,11 @@
     </div>
   </nav>
 
-  <!-- HERO -->
+  
   <section class="jumbotron-custom text-center">
     <div class="container">
       <h1 class="display-4">Santino Rodolfo Alico</h1>
-      <p class="lead">Quién soy · Formación · Perfil profesional</p>
+      <p class="lead">Sobre mí</p>
     </div>
   </section>
 
@@ -66,7 +65,7 @@
     </div>
   </section>
 
-  <!-- ESTUDIOS -->
+
   <section class="container my-5">
     <h2 class="text-center mb-4">Formación académica</h2>
 
@@ -89,20 +88,20 @@
     </div>
   </section>
 
-  <!-- HABILIDADES -->
+  
   <section class="container my-5 text-center">
-    <h2 class="mb-4">Habilidades</h2>
+    <h2 class="mb-4">Competencias</h2>
 
     <div class="d-flex flex-wrap justify-content-center gap-3">
-      <span class="btn btn-sar">HTML</span>
-      <span class="btn btn-sar">CSS</span>
-      <span class="btn btn-sar">JavaScript</span>
       <span class="btn btn-sar">Bootstrap</span>
-      <span class="btn btn-sar">Git & GitHub</span>
+      <span class="btn btn-sar">JavaScript</span>
+      <span class="btn btn-sar">PHP</span>
+      <span class="btn btn-sar">Angular</span>
+      <span class="btn btn-sar">Symfony</span>
     </div>
   </section>
 
-  <!-- FOOTER (EL MISMO QUE INDEX) -->
+  
   <footer class="pt-4">
     <div class="container">
       <div class="row text-center text-md-start">
