modificando el perfil todo

--- a/perfil.html
+++ b/perfil.html
@@ -110,7 +110,7 @@
           <a href="https://www.instagram.com/santialico/">
             <img src="img/instaBuenFondo.png" alt="" class="Logos">
           </a>
-          <a href="mailto:santialico@gmail.com">
+          <a href="mailto:santinoalico5@gmail.com">
             <img src="img/imgCorreo.png" alt="" class="Logos">
           </a>
           <a href="tel:+34622718731">
