--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="col-md-3 mb-3">
           <a href="https://www.instagram.com/santialico/"><img src="img/instaBuenFondo.png" alt="" class="Logos"></a>
           <a
-            href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcSBmXDVLbVbHxFXhTlrKgKBppQlLhWmdPJSTVhXPvHGxZQVNMzGHknZQJMLvmqdLSwVnLbbV"><img
+            href="mailto:santinoalico5@gmail.com"><img
               src="img/imgCorreo.png" alt="" class="Logos"></a>
           <a href="tel:+34622718731"><img src="img/imgTelefono.png" alt="" class="Logos"></a>
           <a href="https://www.linkedin.com/in/santino-alico-174660329/"><img src="img/imgLINKEDING.png" alt=""
