--- a/perfil.html
+++ b/perfil.html
@@ -53,8 +53,8 @@
         <div class="card p-4">
           <h2 class="card-title mb-3">¿Quién soy?</h2>
           <p>
-            Soy Santino Rodolfo Alico, desarrollador web en formación con una gran
-            motivación por crear proyectos funcionales, accesibles y visualmente atractivos.
+            Me llamo Santino Alico, tengo 19 años. <br>
+            Soy desarrollador web en formación con una gran motivación por crear proyectos funcionales, accesibles y visualmente atractivos.
           </p>
           <p>
             Me considero una persona responsable, constante y con facilidad para trabajar
